ChatGPTClone Added Clean Arch

--- a/ChatGPTClone.WebApi/ChatGPTClone.WebApi.csproj
+++ b/ChatGPTClone.WebApi/ChatGPTClone.WebApi.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -18,7 +18,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ChatGPTClone.Persistence\ChatGPTClone.Persistence.csproj" />
+    <ProjectReference Include="..\ChatGPTClone.Application\ChatGPTClone.Application.csproj" />
+    <ProjectReference Include="..\ChatGPTClone.Infrastructure\ChatGPTClone.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
