--- a/ChatGPTClone.WebApi/appsettings.json
+++ b/ChatGPTClone.WebApi/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"PostgreSql": "Server=127.0.0.1;Port=5432;Database=myDataBase;User Id=myUsername;Password=myPassword;"
-    "PostgreSql": "Server=localhost;Port=1453;Database=ChatGPTClone;User Id=postgresql;Password=123alperhocam123;"
+    "PostgreSql": "Server=localhost;Port=1453;Database=ChatGPTClone;User Id=postgres;Password=medula123postgres;"
   }
 }
