--- a/ChatGPTClone.Application/ChatGPTClone.Application.csproj
+++ b/ChatGPTClone.Application/ChatGPTClone.Application.csproj
@@ -10,4 +10,13 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ChatGPTClone.Domain\ChatGPTClone.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Features\ChatSessions\Commands\" />
+    <Folder Include="Features\ChatSessions\Queries\" />
+  </ItemGroup>
+
 </Project>
